-
Bug
-
Resolution: Done
-
P2: Important
-
5.13.1
-
-
a96c4b3aab4592155f7647399f6f2eda98d3908a (qt/qtbase/5.13)
Using multiple displays with different resolution and DPI seems to cause problems with QT_USE_NATIVE_WINDOWS=1. Without it, everything seems fine with the same setup.
I could only reproduce this with Qt Creator. QT_USE_NATIVE_WINDOWS=1 is used by Squish for testing. This has worked with older Qt Creator versions, but now with 4.10, it somehow causes window content to be resized even though the whole window is maximized. Resizing the window also does not help.
- relates to
-
QTBUG-79166 [REG 5.12.4->5.12.5][HiDPI] Native window children have incorrect position on secondary screen
-
- Closed
-
- resulted from
-
QTBUG-73231 When a menubar spans across displays using different DPIs then opening menus on either display can show the menu in the wrong place
-
- Closed
-
| For Gerrit Dashboard: QTBUG-78158 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 273648,5 | QHighDPI: Fix wrong conversion for native child windows | 5.13 | qt/qtbase | Status: MERGED | +2 | 0 |