QHighDPI: Fix wrong conversion for native child windows

Do not try to find a screen for native child coordinates.

Fixes: QTBUG-78158
Change-Id: I78ba814929f4db3dfd7dd43c09f7c7642222f4fb
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>